@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.eclipse.rdf4j</groupId>
 		<artifactId>rdf4j-sail</artifactId>
-		<version>4.2.5-SNAPSHOT</version>
+		<version>4.3.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>rdf4j-sail-elasticsearch-store</artifactId>
 	<name>RDF4J: Elasticsearch Store</name>
@@ -12,19 +12,42 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.elasticsearch.client</groupId>
-			<artifactId>transport</artifactId>
+			<artifactId>elasticsearch-rest-high-level-client</artifactId>
 			<version>${elasticsearch.version}</version>
 			<optional>true</optional>
 			<exclusions>
 				<exclusion>
-					<groupId>log4j</groupId>
-					<artifactId>log4j</artifactId>
+					<groupId>org.apache.httpcomponents</groupId>
+					<artifactId>httpcore</artifactId>
 				</exclusion>
 				<exclusion>
 					<groupId>commons-logging</groupId>
 					<artifactId>commons-logging</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpcore</artifactId>
+			<version>${httpcore.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.elasticsearch.client</groupId>
+			<artifactId>transport</artifactId>
+			<version>${elasticsearch.version}</version>
+			<optional>true</optional>
+			<exclusions>
+				<exclusion>
+					<groupId>commons-logging</groupId>
+					<artifactId>commons-logging</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<!-- org.elasticsearch.client:transport pulls in JCL -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
@@ -40,12 +63,6 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>rdf4j-repository-sail</artifactId>
 			<version>${project.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.codelibs</groupId>
-			<artifactId>elasticsearch-cluster-runner</artifactId>
-			<version>${elasticsearch.version}.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -94,6 +111,66 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	<profiles>
+		<profile>
+			<id>jdk11-securitymanager</id>
+			<activation>
+				<jdk>11</jdk>
+			</activation>
+			<properties>
+				<java.sec.mgr/>
+			</properties>
+		</profile>
+		<profile>
+			<id>jdk-securitymanager</id>
+			<activation>
+				<jdk>[12,)</jdk>
+			</activation>
+			<properties>
+				<java.sec.mgr>-Djava.security.manager=allow</java.sec.mgr>
+			</properties>
+		</profile>
+		<profile>
+			<id>skipIfSkipITs</id>
+			<activation>
+				<property>
+					<name>skipITs</name>
+					<value>true</value>
+				</property>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>com.github.alexcojocaru</groupId>
+						<artifactId>elasticsearch-maven-plugin</artifactId>
+						<configuration>
+							<skip>true</skip>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>skipIfSkipTests</id>
+			<activation>
+				<property>
+					<name>skipTests</name>
+					<value>true</value>
+				</property>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>com.github.alexcojocaru</groupId>
+						<artifactId>elasticsearch-maven-plugin</artifactId>
+						<configuration>
+							<skip>true</skip>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 	<build>
 		<plugins>
 			<plugin>
@@ -102,6 +179,45 @@
 				<configuration>
 					<forkCount>0</forkCount>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.github.alexcojocaru</groupId>
+				<artifactId>elasticsearch-maven-plugin</artifactId>
+				<version>6.26</version>
+				<configuration>
+					<skip>${skipITs}</skip>
+					<skip>${skipTests}</skip>
+					<version>${elasticsearch.version}</version>
+					<clusterName>test</clusterName>
+					<transportPort>9300</transportPort>
+					<httpPort>9200</httpPort>
+					<environmentVariables>
+						<ingest.geoip.downloader.enabled>false</ingest.geoip.downloader.enabled>
+						<ES_JAVA_OPTS>${java.sec.mgr}</ES_JAVA_OPTS>
+					</environmentVariables>
+					<instanceCount>1</instanceCount>
+					<instanceSettings>
+						<properties>
+							<ingest.geoip.downloader.enabled>false</ingest.geoip.downloader.enabled>
+						</properties>
+					</instanceSettings>
+				</configuration>
+				<executions>
+					<execution>
+						<id>start-elasticsearch</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>runforked</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>stop-elasticsearch</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>stop</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
